# $Id$

2006-03-05
	* Added patch to make $cpu stuff work on alpha (thanks Thomas Cort)
	http://bugs.gentoo.org/show_bug.cgi?id=122637#c3
	* Stop using override_redirect true -- conky back under WM control
	when using 'own_window yes'.

2006-02-14
	* Drastically simplified own_window=yes window creation code.
	* on_bottom and wm_class_name deprecated (they do nothing)

2006-02-13
	* Fixed typo bug in portmon code that caused incorrect monitor data 
	to be displayed.

2006-02-12
	* Conky 1.4.0 released

2006-01-27
	* Cleaned up texeci code

2006-01-26
	* Added freedesktop.org extended window manager hints (EWMH)
	for window type NORMAL and state's STICKY/SKIP_PAGER/SKIP_TASKBAR.
	Fixes stacking order issues with freedesktop-compliant wm's,
	such as XFCE4+. 

2006-01-25
	* Fixed stupid graph code (it still sucks) sf.net bug 1372962
	* Fixed $if_* stuff, sf.net bug 1401338 and 1400854
	* Fixed xmms.c code to load glib 1.2 shared object lib.

2006-01-11
	* Added xmms version 1 support.
	* Added bmp through 0.9.7.1 support.
	* Added config item xmms_player: none, xmms, bmp, audacious or
	infopipe.

2006-01-07
	* Added Audacious media player support.

2006-01-06
	* Fixed infopipe bug (select() affects timer as a side effect on
	Linux!)

2006-01-05
	* Added draw_graph_borders option
	* Added XMMS/BMP InfoPipe plugin support

2006-01-01
	* Conky 1.3.5 released

2005-12-31
	* Fixed bug with use_xft causing ignorance of font selection (sf.net
	bug 1387564)
	* Fixed issue with parsing of hex values for colours

2005-12-30
	* Added BMPx (http://beep-media-player.org/) support

2005-12-14
	* Fixed issues with execi stuff

2005-12-10
	* Added sf.net patch 1374576

2005-12-05
	* Fixed sf.net bug 1367745

2005-11-30
	* Fixed sf.net bugs 1369607, 1367735 and gentoo bug 113921, 
	  all variations of the same array out of bounds issue.
	* "Fixed" code in fs.c and conky.c to make fs stats match those displayed by df (affects reporting against ext3 filesystems only)

2005-11-27 